	  used, as Meta-X apparently turns it off even under ncurses.
	  (DLR)
  do_backspace()
	- Vastly simplify, and remove dependency on page_up(). (David
	  Benbennick)
  help_init()
	- Document the support for Esc Esc [character]'s being
	  interpreted as Ctrl-[character], and the support for Pico's
	  Esc Esc [three-digit decimal ASCII code] input method. (DLR)
- nano.h:
	- Define KEY_RESIZE and KEY_SUSPEND as -1 when slang is used, as
	  slang has no equivalent of either.  When nano is compiled with
	  slang support, resizing the window doesn't generate
	  KEY_RESIZE, and pressing Ctrl-Z to suspend nano at the Linux
	  console with keypad(TRUE) generates Ctrl-Z instead of
	  KEY_SUSPEND, both unlike ncurses. (DLR)
- move.c:
	- Remove unneeded inclusion of stdio.h, make various cleanups,
	  and preserve the cursor's coordinates when paging up and down.
	  (David Benbennick)  DLR: Readd the ability to behave the old
	  way while paging, make it so the new behavior is only used in
	  smooth-scrolling mode, and modify page_down() to always go
	  down a full page (even when there's less than one page of text
	  left) for consistency.
  page_up()
	- Removed due to rewrite of movement functions. (David
	  Benbennick)
- proto.h:
	- Surround the do_prev_word() and do_next_word() prototypes with
	  NANO_SMALL #ifdefs, since the actual functions aren't included
	  in tiny mode. (DLR)
- rcfile.c:
  parse_colors()
	- Generate an error if we try to use a bright background color
	  in a nanorc file. (DLR; found by Brand Huntsman)
	- Make sure all rcfile error messages are capitalized, for
	  consistency. (DLR)
- winio.c:
  get_verbatim_kbinput()
	- Fix a silly memory corruption bug that would occur when trying
	  to read a sequence of more than one key verbatim. (DLR)
  get_accepted_kbinput()
	  Handle Ctrl-{ to Ctrl-~ correctly, and drop support for
	  converting Esc ` to Esc Space, since making Meta-[key]
	  correspond to Ctrl-[key] in all cases is inconsistent due to